Refactoring liquidation/redemption logic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.exclude": {
         "**/.gitignore": true,
-        "**/build": true
+        "**/build": true,
+        "**/node_modules": true
     }
 }
