--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
 
-      - run: npm install -g truffle
+      - run: npm install -g truffle@5.3.10
       - run: npm install @truffle/hdwallet-provider
       - run: npm install dotenv
 
       - run: truffle test .\test\finance\OptionsExchange\TestCoveredOption.sol .\test\finance\OptionsExchange\TestExchangeDeposit.sol .\test\finance\OptionsExchange\TestExpectedPayout.sol .\test\finance\OptionsExchange\TestOptionIntrinsicValue.sol .\test\finance\OptionsExchange\TestOptionLiquidation.sol .\test\finance\OptionsExchange\TestOptionTrading.sol .\test\finance\OptionsExchange\TestWriteOptions.sol --compile-all
-      - run: truffle test .\test\pools\LinearLiquidityPool\TestMulticoinTrading.sol .\test\pools\LinearLiquidityPool\TestPoolAvailability.sol .\test\pools\LinearLiquidityPool\TestPoolYield.sol .\test\pools\LinearLiquidityPool\TestQueryPool.sol .\test\pools\LinearLiquidityPool\TestPoolTrading.sol .\test\pools\LinearLiquidityPool\TestPoolShares.sol .\test\pools\LinearLiquidityPool\TestPoolVolumes.sol --compile-all
+      - run: truffle test .\test\pools\LinearLiquidityPool\TestMulticoinTrading.sol .\test\pools\LinearLiquidityPool\TestPoolAvailability.sol .\test\pools\LinearLiquidityPool\TestPoolShares.sol .\test\pools\LinearLiquidityPool\TestPoolTrading.sol .\test\pools\LinearLiquidityPool\TestPoolVolumes.sol .\test\pools\LinearLiquidityPool\TestPoolWithdrawal.sol .\test\pools\LinearLiquidityPool\TestPoolYield.sol .\test\pools\LinearLiquidityPool\TestQueryPool.sol --compile-all
