--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,4 +29,4 @@ jobs:
       # Effectively disabling migration of liquidity pool contracts to prevent running
       # out of gas while migrating contracts for test run
       - run: Rename-Item .\migrations\3_deploy_pool.js 3_deploy_pool.disabled
-      - run: truffle test .\test\finance\OptionsExchange\TestCoveredOption.sol .\test\finance\OptionsExchange\TestExchangeDeposit.sol .\test\finance\OptionsExchange\TestExpectedPayout.sol .\test\finance\OptionsExchange\TestOptionIntrinsicValue.sol .\test\finance\OptionsExchange\TestOptionLiquidation.sol .\test\finance\OptionsExchange\TestOptionTrading.sol .\test\finance\OptionsExchange\TestWriteOptions.sol --compile-all
+      - run: truffle test .\test\finance\OptionsExchange\TestCoveredLiquidation.sol .\test\finance\OptionsExchange\TestCoveredOption.sol .\test\finance\OptionsExchange\TestExchangeDeposit.sol .\test\finance\OptionsExchange\TestExpectedPayout.sol .\test\finance\OptionsExchange\TestOptionIntrinsicValue.sol .\test\finance\OptionsExchange\TestOptionLiquidation.sol .\test\finance\OptionsExchange\TestOptionTrading.sol .\test\finance\OptionsExchange\TestWriteOptions.sol --compile-all
